Affichage des éléments page d'accueil

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -27,8 +27,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-            <a class="nav-link text-white" href="#">Features</a>
-            <a class="nav-link text-white" href="#">Pricing</a>
+            <a class="nav-link text-white" href="#">Panier</a>
+            <a class="nav-link text-white" href="#">Contact</a>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
     <!--HERO END-->
 
     <!--MAIN CONTENT-->
-
+    <section id="list_content">
     <figure id="product">
       <a href="#" class="card mt-5 card-size">
         <img id="product__img" src="" class="card-img-top image-style" alt="...">
@@ -65,7 +65,8 @@
         </figcaption>
       </a> 
     </figure>
-
+    
+<!--
     <figure id="">
       <a href="#" class="card mt-5 card-size">
         <img src="/front-end/img/vcam_1.jpg" class="card-img-top image-style" alt="...">
@@ -78,7 +79,9 @@
         </figcaption>
       </a> 
     </figure>
-          
+
+    </section>
+-->          
 
 
     <!--MAIN CONTENT END-->
