--- a/front-end/index.html
+++ b/front-end/index.html
@@ -53,7 +53,7 @@
 
     <!--MAIN CONTENT-->
     <section id="list_content">
-    <figure id="product">
+    <!---<figure id="product">
       <a href="#" class="card mt-5 card-size">
         <img id="product__img" src="" class="card-img-top image-style" alt="...">
         <figcaption class="card-body">
@@ -64,8 +64,9 @@
             <p id="product__description" class="card-text description"></p>
         </figcaption>
       </a> 
-    </figure>
-    
+    </figure>--->
+  </section> 
+
 <!--
     <figure id="">
       <a href="#" class="card mt-5 card-size">
