--- a/front-end/produit.html
+++ b/front-end/produit.html
@@ -66,7 +66,7 @@
     <footer class="footer">
         <ul class="footer--list">
           <li>
-            <a href="#">• Nous contacter</a>
+            <a href="mailto:orinocam@gmail.fr">• Nous contacter</a>
           </li>
           <li>
             <a href="#">• A propos</a>
