--- a/front-end/index.html
+++ b/front-end/index.html
@@ -18,7 +18,6 @@
 
 <body>
     <!--NAVBAR-->
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand text-white dancing " href="index.html">Orinocam</a>
@@ -28,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-            <a class="nav-link text-white" href="#">Panier</a>
+            <a class="nav-link text-white" href="panier.html">Panier</a>
             <a class="nav-link text-white" href="mailto:orinocam@gmail.fr">Contact</a>
           </div>
         </div>
