--- a/front-end/produit.html
+++ b/front-end/produit.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/productpage_style.css">
+    <link rel="stylesheet" href="./styles/pageproduit_style.css">
     
     <title>Produit</title>
 </head>
@@ -27,14 +27,12 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link text-white" href="#">Panier</a>
+            <a class="nav-link text-white" href="panier.html">Panier</a>
             <a class="nav-link text-white" href="mailto:orinocam@gmail.fr">Contact</a>
           </div>
         </div>
       </div>
     </nav>
-
-    
 
     <!--NAVBAR END-->
 
