--- a/front-end/panier.html
+++ b/front-end/panier.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/panier_style.css">
+    <link rel="stylesheet" href="./styles/style_768px.css">
+    <link rel="stylesheet" href="./styles/style_1024px.css">
+
 
 
     <title>Panier</title>
