--- a/front-end/produit.html
+++ b/front-end/produit.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/pageproduit_style.css">
+    <link rel="stylesheet" href="./styles/style_768px.css">
+    <link rel="stylesheet" href="./styles/style_1024px.css">
     
     <title>Produit</title>
 </head>
