--- a/front-end/produit.html
+++ b/front-end/produit.html
@@ -27,10 +27,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link text-white" href="panier.html">Panier</a>
-            <a class="nav-link text-white" href="mailto:orinocam@gmail.fr">Contact</a>
+          <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNavAltMarkup">
+            <ul class="navbar-nav">
+              <li class="nav-item mx-auto"><a class="nav-link active text-white" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item mx-auto"><a class="nav-link text-white" href="panier.html">Panier</a></li>
+              <li class="nav-item mx-auto"><a class="nav-link text-white" href="mailto:orinocam@gmail.fr">Contact</a></li>
+            </ul>
           </div>
         </div>
       </div>
